[FT:#3622] Added a Message reducer, and displaying the messages in views and globally.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/bootstrap/overwrite.less
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/bootstrap/overwrite.less
@@ -27,3 +27,30 @@
 .modal-container .modal, .modal-container .modal-backdrop {
   position: absolute;
 }
+.alert{
+  margin-bottom: 0px !important;
+}
+
+.badge.success {
+  background: @alert-success-bg;
+  border: 1px solid @alert-success-border;
+  color: @alert-success-text;
+}
+
+.badge.info {
+  background: @alert-info-bg;
+  border: 1px solid @alert-info-border;
+  color: @alert-info-text;
+}
+
+.badge.warning {
+  background: @alert-warning-bg;
+  border: 1px solid @alert-warning-border;
+  color: @alert-warning-text;
+}
+
+.badge.danger {
+  background: @alert-danger-bg;
+  border: 1px solid @alert-danger-border;
+  color: @alert-danger-text;
+}
