--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Page/Page.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Page/Page.css
@@ -1,8 +1,9 @@
 @import '../style/variables';
 
 .root{
-  overflow-y: auto;
+  overflow-y: scroll;
   overflow-x: hidden;
+  height: 100%;
 }
 .contentWithEditor{
   margin-left: var(--editor-width)
