--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -29,7 +29,7 @@
   position: absolute;
   top: 46px;
   padding-left: 0px;
-  width: 100%;
+  width: calc(100% - 10px);
   height: 100%;
   max-height: calc(100% - 68px);
   overflow-y: auto;
