[FT:#3622] Upgrade stockchart and implement multi YAxes

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/View/Header.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/View/Header.css
@@ -4,13 +4,10 @@
   width: 100%;
   height: 28px;
   display: flex;
-  background-color: #CCC;
+  background-color: var(--gray-lighter);
 }
 .containerActive {
-  background-color: var(--brand-primary);
-  > *, button {
-    color: white !important;
-  }
+  background-color: var(--gray-lighter-2);
 }
 .title {
   display: inline-block;
