--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Page/Content.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Page/Content.css
@@ -11,7 +11,7 @@
   background-color: white;
   border: 2px solid var(--brand-primary);
   overflow: auto;
-  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
 
 .noPage {
@@ -24,4 +24,10 @@
   font-weight: bolder;
   text-transform: uppercase;
   color: rgba(0, 0, 0, .1);
+}
+
+:global{
+  .react-resizable-handle{
+    z-index: 10;
+  }
 }
