[FT:#3622] Added the edition of default width and the 'restore default width' button.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -39,6 +39,7 @@
   Cursors
 */
 .lower, .upper, .current, .slide{
+    z-index: 4;
     cursor: col-resize;
     position: absolute;
     height: 100%;
