[FT:#3622] Now server and dc stubs are launched from client main process and close on main process exit.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/index.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/index.css
@@ -2,3 +2,6 @@
 @import './helpers.css';
 @import './global.css';
 @import './buttons.css';
+
+@import 'react-grid-layout/css/styles.css';
+@import 'react-resizable/css/styles.css';
