[FT:#3622] Popover to edit timebar speed.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Controls.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Controls.css
@@ -29,3 +29,11 @@
   box-shadow: 0px 0px 6px #337ab7 inset;
   border: 1px solid #337ab7;
 }
+.speedPopover{
+  width: 200px;
+}
+.speedInputEl{
+  display: inline-block;
+  margin-right: 10px;
+  width: 100px;
+}
