[FT:#3622] Minor changes on display / css .

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -32,7 +32,7 @@
 .formatedFullDate{
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, 30%);
 }
 
 /*
@@ -201,7 +201,6 @@
 .resizeTimebarContainer{
   margin: 0;
   height: 4px;
-  border-top: 1px solid #aaa;
   cursor: row-resize;
 }
 .resizeTimebarContainer:before{
