[FT:#3622] RSC: collapsed views not resizable. Refactoring of the getMasterTimelineById selector method, only takes state as argument.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/variables.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/variables.css
@@ -18,7 +18,11 @@
   --boundCursorsColor: #E45;
   --slideCursorColor: #45E;
 }
-
+.collapsed{
+  .react-resizable-handle{
+    display: none;
+  }
+}
 /*
 Use variables in your files that way: var(--brand-primary)
 */
