--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Controls.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Controls.css
@@ -24,6 +24,11 @@
   box-shadow: 0px 0px 6px #337ab7 inset;
   border: 1px solid #337ab7;
 }
+.controlButtonDisabled{
+  opacity: 0.65;
+  cursor: default;
+  line-height: 1.6em;
+}
 .speedPopover{
   width: 200px;
 }
