--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -5,16 +5,17 @@
 .timebarName{
   position: absolute;
   top: 0px;
-  left: 25px;
-  margin-top: 0px;
+  width: 100%;
+  text-align: center;
 }
 .btnClose{
   position: absolute;
   left: 0px;
   top: 0px;
-  width: 20px;
-  min-width: 20px;
-  height: 20px;
+  padding: 2px 8px;
+  border-radius: 1px;
+  height: 22px;
+  z-index: 3;
 }
 .offset{
   position: absolute;
@@ -35,6 +36,7 @@
   overflow-y: auto;
 }
 .timeline{
+  line-height: 12px;
   position: relative;
   background: #efefef;
   border: 1px solid #bbb;
@@ -45,10 +47,14 @@
   height: 18px;
   font-weight: bold;
   cursor: pointer;
+  &:hover{
+    background: #dfdfdf;
+  }
+  &:active{
+    background: #c0c0c0;
+  }
 }
-.timeline:hover{
-  background: #dfdfdf;
-}
+
 .master{
   background: #efefef;
   border: 1px solid #111;
@@ -62,6 +68,7 @@
   right: 0px;
   padding: 2px 8px;
   border-radius: 1px;
+  height: 22px;
 }
 .labelFormControl{
   text-align: right;
