--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/VIVL/PlotView/window/PlotView.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/VIVL/PlotView/window/PlotView.css
@@ -7,3 +7,16 @@
   left: 5px;
   z-index: 10;
 }
+.errorContent {
+  padding: 1em;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.renderErrorText {
+  margin: auto;
+  font-size: 3em;
+  color: #CCC;
+  text-align: center;
+  font-weight: 600;
+}
