[FT:#3622] Track -> Timeline : refactored the timeline edition / add -> redux-form.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -56,8 +56,15 @@
 }
 
 .master{
-  background: #efefef;
-  border: 1px solid #111;
+  background: #222;
+  color: #FFF;
+  line-height: 18px;
+  text-align: center;
+  height: 17px;
+  width: 17px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
 .formGroup{
   margin-bottom: 4px;
