--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/VIVL/DynamicView/window/DynamicView.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/VIVL/DynamicView/window/DynamicView.css
@@ -1,13 +1,3 @@
-.table, .th, .td {
-  border: 1px solid black;
-  padding: 15px;
-  text-align: left;
-}
-.thd {
-  border: 1px solid black;
-  padding: 15px;
-  text-align: center;
-}
 .obj {
   margin: 0.5;
   font-size: 2.0rem;
@@ -16,6 +6,14 @@
   font-family: Arial, Helvetica, Helvetica Neue;
 }
 
+.header, .footer {
+    padding: 1em;
+    color: #999;
+    background-color: #eee;
+    clear: left;
+    text-align: center;
+    margin-bottom: 30px;
+}
 :root {
   --light: rgba(255, 255, 255, 0.1);
 }
