--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -3,7 +3,7 @@
 .viewportWrapper{
     padding-top: 24px;
     position: relative;
-    height: 100%;
+    height: calc(100% + 13px);
     overflow: hidden;
 }
 .viewportContainer{
@@ -250,3 +250,14 @@
   bottom: 0px;
   background-color: #F45;
 }
+.rightTab{
+  border-width: 2px;
+  border-style: solid;
+  width: 100%;
+  height: calc(100% - 15px);
+}
+.play{ border-color: var(--borderPlay); }
+.pause{ border-color: var(--borderPause); }
+.realtime{ border-color: var(--borderRealtime); }
+.acc{ border-color: var(--borderAcc); }
+.desc{ border-color: var(--borderDesc); }
