[FT:#3622] Entrypoints in views: add error reasons

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/global.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/global.css
@@ -7,6 +7,7 @@ body {
   font-family: Arial, Helvetica, Helvetica Neue;
   background-color: #F1F1F1;
   color: #222;
+  overflow-y: hidden;
 }
 
 h2 {
