[FT:#3622] Few optimisations in PlotView; margin and xExtends calculaded only when necessary.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/VIVL/PlotView/window/PlotView.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/VIVL/PlotView/window/PlotView.css
@@ -20,3 +20,11 @@
   text-align: center;
   font-weight: 600;
 }
+.entryPointError{
+  padding: 1em;
+  position: absolute;
+  z-index: 100;
+}
+.entryPointErrorSubDiv{
+  line-height: 1.5em;
+}
