[FT:#3622] PlotView updates : getCharts() splitted into getXCharts() and getYCharts().

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/helpers.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/helpers.css
@@ -18,6 +18,13 @@
 .posRelative{
   position: relative;
 }
+.posAbsolute{
+  position: absolute;
+}
+
+.z100{
+  z-index: 100;
+}
 
 .h100{
   height: 100%;
