--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -1,5 +1,11 @@
 @import '../style/variables.css';
 
+.timebarWrapperCollapsed{
+  height: 36px;
+  padding-top: 2px;
+  text-align: center;
+  background: rgba(0,0,0,0.4);
+}
 .viewportWrapper{
     padding-top: 24px;
     position: relative;
