--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Window/Window.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Window/Window.css
@@ -16,3 +16,16 @@
 .tools {
   padding: 5px;
 }
+.grid{
+  height: 100%;
+  margin-left: 10px;
+  margin-right: 10px;
+  overflow-y: auto;
+  width: 100%;
+  flex: 1;
+}
+.div{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
