[FT:#3622] Styles general review, page / views / timebar, alignements .

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -4,38 +4,27 @@
 }
 .timebarName{
   position: absolute;
-  top: 0px;
+  top: 5px;
   width: 100%;
   text-align: center;
 }
-.btnClose{
+.addTimelineButton, .btnClose, .btnCollapse{
   position: absolute;
-  left: 0px;
-  top: 0px;
-  padding: 2px 8px;
-  border-radius: 1px;
-  height: 22px;
+  top: 5px;
+  margin: 0px;
   z-index: 3;
-  background: #b55;
-  border: 1px solid #855;
-  &:hover, &:focus{
-    background: #955;
-    border: 1px solid #855;
+  outline: inherit;
+  &:visited, &:focus, &:active{
+    outline: inherit;
   }
-}
-.btnCollapse{
-  position: absolute;
-  left: 34px;
-  top: 0px;
-  padding: 2px 8px;
-  border-radius: 1px;
-  height: 22px;
-  z-index: 3;
-  background: #B95;
-  border: 1px solid #A85;
-  &:hover, &:focus{
-    background: #A95;
-    border: 1px solid #A95;
+  &.btnClose{
+    right: 0px;
+  }
+  &.btnCollapse{
+    right: 15px;
+  }
+  &.addTimelineButton{
+    left: 0px;
   }
 }
 .offset{
@@ -89,14 +78,6 @@
 }
 .formGroup{
   margin-bottom: 4px;
-}
-.addTimelineButton{
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  padding: 2px 8px;
-  border-radius: 1px;
-  height: 22px;
 }
 .labelFormControl{
   text-align: right;
