--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/buttons.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/buttons.css
@@ -39,3 +39,9 @@
   z-index: 2;
   font-weight: 600;
 }
+.btn-transp{
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  min-width: 20px;
+}
