--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
@@ -2,6 +2,7 @@
 @import './helpers.css';
 @import './global.css';
 @import './buttons.css';
+@import './components.css';
 
 @import 'react-grid-layout/css/styles.css';
 @import 'react-resizable/css/styles.css';
