--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/Header.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/Header.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 28px;
   display: flex;
-  background-color: var(--gray-lighter);
+  background-color: #dfdfdf;
 }
 .containerActive {
   background-color: var(--gray-lighter-2);
@@ -15,4 +15,22 @@
   line-height: 2;
   padding-left: 5px;
   font-size: 1.3rem;
+}
+.dropDownButtonContainer{
+  position: absolute;
+  top: 1px;
+  right: 1px;
+}
+.dropDownButton{
+  height: 100%;
+  background: #EFEFEF;
+  font-weight: 400;
+  margin: 2px 2px 0px 5px;
+  padding: 5px 10px !important;
+  line-height: 10px !important;
+  color: #333;
+  &:hover, &:active, &:focus{
+    background: #efefef;
+    text-decoration: none;
+  }
 }
