[FT:#3622] Improve design in TextView header

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/Header.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/Header.css
@@ -7,7 +7,7 @@
   background-color: #dfdfdf;
 }
 .containerActive {
-  background-color: var(--gray-lighter-2);
+  background-color: rgb(63, 81, 181);
 }
 .title {
   display: inline-block;
