[FT:#3622] no custom attributes in react elements, no bind in render, no new object given as style.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -1,5 +1,9 @@
 @import '../style/variables.css';
 
+.h100minus13{
+  height: calc(100% - 13px);
+}
+
 .timebarWrapperCollapsed{
   height: 36px;
   padding-top: 2px;
@@ -279,7 +283,7 @@
   border-width: 1px;
   border-style: solid;
   width: 100%;
-  height: calc(100% - 13px);
+  height: 100%;
 }
 .play{ border-color: var(--borderPlay); }
 .pause{ border-color: var(--borderPause); }
