--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/DynamicView/DynamicView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/DynamicView/DynamicView.css
@@ -14,3 +14,10 @@
     text-align: center;
     margin-bottom: 30px;
 }
+.renderErrorText {
+  margin: auto;
+  font-size: 3em;
+  color: #CCC;
+  text-align: center;
+  font-weight: 600;
+}
