--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Explorer/Explorer.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Explorer/Explorer.css
@@ -1,3 +1,4 @@
+@import '../style/variables';
 .root{
 }
 .tabs{
@@ -5,10 +6,16 @@
   padding-bottom: 10px;
   height: 100%;
 }
-
+.buttons{
+  padding-top: 10px;
+  margin: 5px;
+}
+.button{
+  margin-right: 5px;
+  margin-bottom: 3px;
+}
 .content{
   overflow: auto;
-  flex-direction: column;
   display: flex;
   height: 100%;
   padding: 10px;
@@ -41,3 +48,41 @@
     z-index: 4;
     top: 48%;
 }
+.label{
+  color: white;
+  font-size: 1.2em;
+  margin-left: 5px;
+  display: inline-flex;
+  width: 100%
+}
+.panel{
+  display: flex;
+  flex-direction: column;
+}
+.details{
+  display: inline-flex;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.type{
+  display: inline-flex;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+.block{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.listLeft{
+  list-style-type: disc;
+  padding: 2px;
+}
+.listRight{
+  list-style-type: none;
+  padding: 2px;
+  white-space: nowrap;
+}
+.nav{
+  display: flex;
+}
+/*font-weight: bold;*/
