[FT:#3622] Improvements for GrizzlyChart. Grids style and width, axes positionning.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
@@ -6,13 +6,31 @@
 }
 .yAxis{
   position: absolute;
+  overflow: visible !important;
 }
-.yAxisGroup{
 
-}
 .xAxis{
   position: absolute;
+  overflow: visible !important;
 }
 .xAxisGroup{
+  line {
+    stroke: #AAA;
+  }
+}
 
+.yAxisGroup{
+  line {
+    stroke: #AAA;
+  }
+}
+.Dotted{
+  line {
+    stroke-dasharray: 2.2;
+  }
+}
+.Dashed{
+  line {
+    stroke-dasharray: 5;
+  }
 }
