--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -57,9 +57,6 @@
   height: 18px;
   font-weight: bold;
   cursor: pointer;
-  &:hover{
-    background: #dfdfdf;
-  }
   &:active{
     background: #c0c0c0;
   }
@@ -99,6 +96,19 @@
   position: absolute;
   top: 0px;
   right: 0px;
+  text-align: center;
+  border: none;
+  height: 100%;
+}
+.editButton{
+  background: #444;
+  cursor: pointer;
+  color: #fff;
+  padding: 1px 6px;
+  border-radius: 1px;
+  position: absolute;
+  top: 0px;
+  right: 26px;
   text-align: center;
   border: none;
   height: 100%;
