--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
@@ -34,3 +34,16 @@
     stroke-dasharray: 5;
   }
 }
+.yAxisLabel{
+  border-radius: 2px;
+  padding: 2px 6px;
+  &.labelUnderline{
+    text-decoration: underline;
+  }
+  &.labelBold{
+    font-weight: bold;;
+  }
+  &.labelItalic{
+    font-style: italic;
+  }
+}
