[FT:#3622] Fix css bug on production bundle

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -17,15 +17,15 @@
   &:visited, &:focus, &:active{
     outline: inherit;
   }
-  &.btnClose{
-    right: 0px;
-  }
-  &.btnCollapse{
-    right: 15px;
-  }
-  &.addTimelineButton{
-    left: 0px;
-  }
+}
+.btnClose{
+  right: 0px;
+}
+.btnCollapse{
+  right: 15px;
+}
+.addTimelineButton{
+  left: 0px;
 }
 .offset{
   position: absolute;
