--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -73,39 +73,37 @@
     position: absolute;
     height: 100%;
     width: 3px;
-    &.current{
-      border-left: 2px solid var(--currentCursorColor);
-    }
-    &.lower{
-        left: 0px;
-        border-left: 1px solid var(--boundCursorsColor);
-    }
-    &.upper{
-        right: 0px;
-        border-right: 1px solid var(--boundCursorsColor);
-    }
-    &.slide{
-        right: 0px;
-        border-right: 1px solid var(--slideCursorColor);
-    }
-    &.lower:before, &.upper:before{
-        width: 10px;
-        height: 10px;
-        content: '≡';
-        color: #E45;
-        transform: rotate(90deg);
-        position: absolute;
-        top: 48%;
-    }
-    &.lower:before{
-        left: 2px;
-    }
-    &.upper:before{
-        left: -8px;
-    }
 }
-
-
+.current{
+  border-left: 2px solid var(--currentCursorColor);
+}
+.lower{
+    left: 0px;
+    border-left: 1px solid var(--boundCursorsColor);
+}
+.upper{
+    right: 0px;
+    border-right: 1px solid var(--boundCursorsColor);
+}
+.slide{
+    right: 0px;
+    border-right: 1px solid var(--slideCursorColor);
+}
+.lower:before, .upper:before{
+    width: 10px;
+    height: 10px;
+    content: '≡';
+    color: #E45;
+    transform: rotate(90deg);
+    position: absolute;
+    top: 48%;
+}
+.lower:before{
+    left: 2px;
+}
+.upper:before{
+    left: -8px;
+}
 
 /*
   Handles
@@ -129,14 +127,14 @@
   &.handleLower, &.handleUpper{
     top: 5px;
     background: var(--boundCursorsColor);
-    &.handleLower{
-      left: 0px;
-      transform: translateX(-50%);
-    }
-    &.handleUpper{
-      right: 0px;
-      transform: translateX(50%);
-    }
+  }
+  &.handleLower{
+    left: 0px;
+    transform: translateX(-50%);
+  }
+  &.handleUpper{
+    right: 0px;
+    transform: translateX(50%);
   }
   &.handleCurrent{
     top: 20px;
