--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/buttons.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/buttons.css
@@ -12,7 +12,7 @@
   border: 1px solid #555;
   outline: 0;
   text-align: center;
-  &:hover{
+  &:hover {
     background-color: #555;
     color: #fff;
     outline: 0 !important;
@@ -26,7 +26,7 @@
     color: #fff;
     outline: 0 !important;
   }
-  &.active{
+  &:active{
     background: #60a7e5;
     box-shadow: 0px 0px 6px #337ab7 inset;
     border: 1px solid #337ab7;
