--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
@@ -49,5 +49,10 @@
 }
 .yAxisLineLabel{
   position: absolute;
+  border-radius: 1px;
   z-index: 3;
+  text-shadow: 0px 0px 1px #888;
+  padding: 2px;
+  padding-top: 4px;
+  box-shadow: 0px 0px 7px rgba(0,0,0,0.2);
 }
