--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/editorProcess/WYSIWYG.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/editorProcess/WYSIWYG.css
@@ -21,9 +21,21 @@
 
   :global {
     .CodeMirrorField {
-      height: calc(100% - 34px);
+      height: calc(100% - 50px);
     }
     .ClearSubmitButtons{
     }
   }
+}
+
+.footer {
+  background-color: #F7F7F7;
+  border-top: 1px solid rgb(221,221,221);
+  height: 50px;
+  text-align: right;
+}
+
+.footerButton {
+  margin-top: 13px;
+  margin-right: 14px;
 }
