--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -28,8 +28,7 @@
   left: 0px;
 }
 .offset{
-  position: absolute;
-  right: 40px;
+  padding-left: 15px;
 }
 .leftTabTopPanel{
   position: relative;
