--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Page/Content.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Page/Content.css
@@ -9,19 +9,19 @@
   background-color: white;
   border: 2px solid var(--brand-primary);
   overflow: auto;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0 0 5px 0 rgba(0,0,0,0.75);
 }
 
 .noPage {
-  width: 400px;
-  height: 100%;
-  min-height: 100%;
-  margin: 30vh auto 0 auto;
   text-align: center;
   font-size: 5rem;
   font-weight: bolder;
   text-transform: uppercase;
   color: rgba(0, 0, 0, .1);
+}
+
+.grid {
+  flex: 1;
 }
 
 :global {
