[FT:#3622] Grizzly: tooltip improvements, handle no data.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
@@ -64,6 +64,7 @@
 }
 .tooltip{
   position: absolute;
+  min-height: 90px;
   border: 1px solid #ccc;
   background: #FFF;
   border-radius: 2px;
@@ -100,4 +101,20 @@
 }
 .tooltipLineValue{
 
+}
+.tooltipNoData{
+  font-size: 1.2em;
+  font-style: bold;
+  text-align: center;
+}
+.zoomAndPanLabels{
+  position: absolute;
+  top: 5px;
+  width: 100px;
+  z-index: 5;
+  & > button{
+    text-align: left;
+    display: block;
+    margin-bottom: 4px;
+  }
 }
