--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
@@ -1,6 +1,38 @@
 .container{
   position: relative;
 }
+@-webkit-keyframes rainbow{
+	20%{color: black;}
+	40%{color: yellow;}
+	60%{color: green;}
+	80%{color: blue;}
+	100%{color: orange;}
+}
+@keyframes grizzlyTitle {
+  0% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1.0);
+  }
+  30% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1.0);
+  }
+  100% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(1.6);
+  }
+};
+.mainTitle{
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.0);
+  color: #45E;
+  font-weight: 600;
+  opacity: 0;
+  font-style: 50px;
+  animation: grizzlyTitle 1.6s, rainbow 1.6s;
+}
 .canvas{
   position: absolute;
 }
