--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/codeEditorProcess/Source.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/codeEditorProcess/Source.css
@@ -13,17 +13,25 @@
 }
 
 .form {
+  height: 100%;
+  background-color: white;
   display: flex;
   flex-direction: column;
   flex: 1 1 100%;
   position: relative;
-  height: 100%;
 
   :global {
     .CodeMirrorField {
       height: calc(100% - 50px);
     }
     .ClearSubmitButtons{
+    }
+    .ReactCodeMirror {
+      overflow: hidden;
+      height: 100%;
+    }
+    .CodeMirror {
+      height: 100%;
     }
   }
 }
