--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
@@ -122,6 +122,15 @@
   transition: opacity ease-out 0.1s;
 
 }
+.tooltipLine{
+  position: relative;
+  & > p{
+    font-size: 1.0em;
+    position: absolute;
+    top: 2px;
+    left: 22px;
+  }
+}
 .tooltipLineSquare{
   width: 16px;
   height: 16px;
@@ -138,6 +147,16 @@
   font-size: 1.2em;
   font-style: bold;
   text-align: center;
+}
+.tooltipOffset{
+  color: #235;
+  position: absolute;
+  right: 0;
+  top: 2px;
+  color: #3A3;
+  &.neg{
+    color: #A33;
+  }
 }
 .zoomAndPanLabels{
   position: absolute;
