--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
@@ -77,6 +77,9 @@
   padding: 2px;
   padding-top: 4px;
   box-shadow: 0px 0px 7px rgba(0,0,0,0.2);
+  &:hover{
+    z-index: 6;
+  }
 }
 .tooltipCanvas{
   position: absolute;
@@ -94,7 +97,7 @@
   transition: left ease-out 0.2s, top ease-out 0.2s, opacity ease-out 0.1s;
 }
 .tooltipAxisLabel{
-  font-style: weight;
+  font-style: bold;
 }
 .tooltipVerticalCursor{
   position: absolute;
