--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
@@ -81,75 +81,86 @@
     z-index: 6;
   }
 }
-.tooltipCanvas{
+.tooltipDiv{
   position: absolute;
   z-index: 4;
   overflow: hidden;
-}
-.tooltip{
-  position: absolute;
-  min-height: 90px;
-  border: 1px solid #ccc;
-  background: #FFF;
-  border-radius: 2px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
-  padding: 6px;
-  transition: left ease-out 0.2s, top ease-out 0.2s, opacity ease-out 0.1s;
-}
-.tooltipAxisLabel{
-  font-style: bold;
-}
-.tooltipVerticalCursor{
-  position: absolute;
-  top: 0;
-  width: 1px;
-  background: #111;
-  transition: opacity ease-out 0.1s;
-}
-.tooltipHorizontalCursor{
-  left: 0;
-  position: absolute;
-  height: 1px;
-  background: #111;
-  transition: opacity ease-out 0.1s;
-
-}
-.tooltipLine{
-  position: relative;
-  & > p{
-    font-size: 1.0em;
+  .tooltipVerticalCursor{
     position: absolute;
-    top: 2px;
-    left: 22px;
+    top: 0;
+    width: 1px;
+    background: #111;
+    transition: opacity ease-out 0.1s;
+  }
+  .tooltipHorizontalCursor{
+    left: 0;
+    position: absolute;
+    height: 1px;
+    background: #111;
+    transition: opacity ease-out 0.1s;
+  }
+  .tooltip{
+    position: absolute;
+    min-height: 90px;
+    border: 1px solid #ccc;
+    background: rgba(255, 255, 255, 0.85);
+    border-radius: 2px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+    padding: 6px;
+    transition: left ease-out 0.2s, top ease-out 0.2s, opacity ease-out 0.1s;
+    .tooltipAxisLabel{
+      font-style: bold;
+    }
+    .tooltipLine{
+      position: relative;
+      & > p{
+        font-size: 1.0em;
+        position: absolute;
+        top: 2px;
+        left: 22px;
+      }
+    }
+    .tooltipLineSquare{
+      width: 16px;
+      height: 16px;
+      display: inline-block;
+      margin-right: 6px;
+    }
+    .tooltipLineName{
+      margin-right: 6px;
+    }
+    .tooltipNoData{
+      font-size: 1.2em;
+      font-style: bold;
+      text-align: center;
+    }
+    .tooltipOffset{
+      color: #235;
+      position: absolute;
+      right: 0;
+      top: 2px;
+      &.red{
+        color: #A33;
+      }
+      &.green{
+        color: #4B4;
+      }
+    }
+    &.tooltipBlack{
+      background: rgba(00, 00, 00, 0.85);
+      color: #FFF;
+      .tooltipOffset {
+        &.red{
+          color: #F55;
+        }
+        &.green{
+          color: #4F4;
+        }
+      }
+    }
   }
 }
-.tooltipLineSquare{
-  width: 16px;
-  height: 16px;
-  display: inline-block;
-  margin-right: 6px;
-}
-.tooltipLineName{
-  margin-right: 6px;
-}
-.tooltipLineValue{
 
-}
-.tooltipNoData{
-  font-size: 1.2em;
-  font-style: bold;
-  text-align: center;
-}
-.tooltipOffset{
-  color: #235;
-  position: absolute;
-  right: 0;
-  top: 2px;
-  color: #3A3;
-  &.neg{
-    color: #A33;
-  }
-}
 .zoomAndPanLabels{
   position: absolute;
   top: 5px;
