[FT:#3622] Grizzly, new tooltip color blue, changing default PlotView padding 5 -> 10.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
@@ -150,5 +150,17 @@
         }
       }
     }
+    &.tooltipBlue{
+      background: rgba(00, 00, 35, 0.85);
+      color: #FFF;
+      .tooltipOffset {
+        &.red{
+          color: #F55;
+        }
+        &.green{
+          color: #4F4;
+        }
+      }
+    }
   }
 }
