--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
@@ -76,7 +76,7 @@
 .tooltipDiv{
   position: absolute;
   z-index: 4;
-  overflow: hidden;
+  overflow: visible;
   .tooltipVerticalCursor{
     position: absolute;
     top: 0;
@@ -91,11 +91,29 @@
     background: #111;
     transition: opacity ease-out 0.1s;
   }
+  .tooltipXLabel{
+    position: absolute;
+    bottom: -8px;
+    font-size: 0.9em;
+    padding: 2px;
+    background: #111;
+    color: #FFF;
+    z-index: 5;
+  }
+  .tooltipYLabel{
+    position: absolute;
+    font-size: 0.9em;
+    padding: 2px;
+    background: #111;
+    color: #FFF;
+    z-index: 5;
+  }
   .tooltip{
     position: absolute;
+    z-index: 6;
     min-height: 90px;
     border: 1px solid #ccc;
-    background: rgba(255, 255, 255, 0.85);
+    background: rgba(255, 255, 255, 0.90);
     border-radius: 2px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
     padding: 6px;
