--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/DynamicView/DynamicView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/DynamicView/DynamicView.css
@@ -14,10 +14,48 @@
     text-align: center;
     margin-bottom: 30px;
 }
+.arrayHeader {
+    padding: 1em;
+    color: #999;
+    background-color: #eee;
+    clear: left;
+    text-align: left;
+    margin-bottom: 5px;
+}
 .renderErrorText {
   margin: auto;
   font-size: 3em;
   color: #CCC;
   text-align: center;
   font-weight: 600;
+}
+.dt {
+  text-align: left;
+  margin: 0 0 4px 0;
+  float: left;
+  clear: left;
+  width: 100px;
+}
+.dd {
+  margin: 0 0 4px 200px;
+}
+.panel {
+  overflow: auto;
+}
+
+.details{
+  display: inline-flex;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  white-space: nowrap;
+}
+.listLeft{
+  list-style-type: none;;
+  text-align: right;
+  padding: 2px;
+}
+.listRight{
+  list-style-type: none;
+  padding: 2px;
+  white-space: nowrap;
 }
