--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/PlotView/Grizzly/GrizzlyChart.css
@@ -4,7 +4,7 @@
     position: absolute;
     top: 5px;
     width: 100px;
-    z-index: 5;
+    z-index: 10;
     & > button{
       text-align: left;
       display: block;
@@ -178,6 +178,34 @@
           color: #4F4;
         }
       }
+    }
+  }
+}
+
+.Zones{
+  z-index: 8;
+  position: absolute;
+  & > .ZonesAxis{
+    position: absolute;
+    height: 100%;
+    /*pointer-events: none;*/
+    border: 3px solid rgba(0, 140, 220, 0.3);
+    background: rgba(0, 140, 220, 0.03);
+    cursor: row-resize;
+    &:hover{
+      border: 3px solid rgba(0, 140, 220, 0.6);
+      background: rgba(0, 140, 220, 0.11);
+    }
+  }
+  & > .ZonesChart{
+    position: absolute;
+    height: 100%;
+    border: 3px solid rgba(0, 220, 140, 0.3);
+    background: rgba(0, 220, 140, 0.03);
+    cursor: col-resize;
+    &:hover{
+      border: 3px solid rgba(0, 220, 140, 0.6);
+      background: rgba(0, 220, 140, 0.11);
     }
   }
 }
