--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/Header.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/Header.css
@@ -34,3 +34,25 @@
     text-decoration: none;
   }
 }
+.expandButton{
+  opacity: 1;
+  backgroundColor: rgb(239,239,239);
+  color: rgb(51,51,51);
+  padding: 3px 6px;
+  marginLeft: 3px;
+  marginRight: 3px;
+  marginTop: 1px;
+  height: 22px;
+  border: 1px solid rgb(180,180,180);
+}
+.saveButton{
+  opacity: 1;
+  backgroundColor: rgb(239,239,239);
+  color: rgb(51,51,51);
+  padding: 3px 6px;
+  marginLeft: 3px;
+  marginRight: 3px;
+  marginTop: 1px;
+  height: 22px;
+  border: 1px solid rgb(180,180,180);
+}
