--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/codeEditorProcess/Source.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/codeEditorProcess/Source.css
@@ -12,6 +12,20 @@
   }
 }
 
+.hintDiv{
+  height: 10%;
+  background-color: #f7f7f7;
+  padding-left: 45px;
+  h3{
+    color: #511;
+  }
+  p{
+    font-size: 1.0em;
+    color: #611;
+    padding-bottom: 5px;
+    padding-top: 5px;
+  }
+}
 .form {
   height: 100%;
   background-color: white;
@@ -22,7 +36,7 @@
 
   :global {
     .CodeMirrorField {
-      height: calc(100% - 50px);
+      height: 82%;
     }
     .ClearSubmitButtons{
     }
@@ -39,7 +53,7 @@
 .footer {
   background-color: #F7F7F7;
   border-top: 1px solid rgb(221,221,221);
-  height: 50px;
+  height: 8%;
   text-align: right;
 }
 
