[FT:#5512] PlotView legend height is smarter.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/PlotView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/PlotView.css
@@ -26,6 +26,7 @@
     max-height: 75px;
     overflow-y: auto;
     max-width: 600px;
+    margin: 0;
     display: block;
     li{
       display: inline-block;
