--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Explorer/Explorer.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Explorer/Explorer.css
@@ -1,6 +1,12 @@
 @import '../style/variables';
-.root{
+
+.container {
+  background: #FAFAFA;
+  border-left: 1px solid #aaa;
+  padding: 0 5px;
+  height: 100%;
 }
+
 .tabs{
   padding-top: 5px;
   padding-bottom: 10px;
@@ -34,22 +40,6 @@
   font-weight: bold;
 }
 
-.resizeContainer{
-  margin: 0;
-  width: 4px;
-  cursor: col-resize;
-}
-.resizeContainer:before{
-    width: 12px;
-    height: 20px;
-    content: '≡';
-    color: #888;
-    position: absolute;
-    font-size: 1.2em;
-    transform: rotate(90deg);
-    z-index: 4;
-    top: 48%;
-}
 .label{
   color: white;
   font-size: 1.2em;
@@ -88,4 +78,3 @@
 .nav{
   display: flex;
 }
-/*font-weight: bold;*/
