[FT:#5828] Add dataMap and store explorer widgets

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
@@ -4,6 +4,7 @@
 @import './buttons.css';
 @import './components.css';
 
+@import 'react-json-inspector/json-inspector.css';
 @import 'react-grid-layout/css/styles.css';
 @import 'react-resizable/css/styles.css';
 @import './flatpickr/flatpickr.css';
