[FT:#5828] Add Tooltip and use it in dropdown menu

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/View.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/View.css
@@ -1,7 +1,7 @@
 .container {
   height: 100%;
   position: relative;
-  overflow: hidden;
+  overflow: visible;;
 }
 .content {
   height: calc(100% - 28px);
