--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/View.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/View.css
@@ -1,7 +1,7 @@
 .container {
   height: 100%;
   position: relative;
-  overflow: visible;;
+  overflow: hidden;
 }
 .content {
   height: calc(100% - 28px);
