--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -24,7 +24,39 @@
     background: #FAFAFA;
     height: calc(100% - 52px);
 }
-
+.visuWindow{
+    top: 0px;
+    position: absolute;
+    background: linear-gradient(90deg,
+      rgba(200, 126, 249,0.5) 0%,
+      rgba(200, 126, 249,0.4) 4%,
+      rgba(200, 126, 249,0.3) 8%,
+      rgba(200, 126, 249,0.3) 92%,
+      rgba(200, 126, 249,0.4) 96%,
+      rgba(200, 126, 249,0.5) 100%);
+    height: 100%;
+    cursor: pointer;
+    z-index: 1;
+}
+.viewportDragging{
+    background: linear-gradient(90deg,
+      rgba(200, 126, 209,0.7) 0%,
+      rgba(200, 126, 209,0.6) 4%,
+      rgba(200, 126, 209,0.5) 8%,
+      rgba(200, 126, 209,0.5) 92%,
+      rgba(200, 126, 209,0.6) 96%,
+      rgba(200, 126, 209,0.7) 100%);
+    cursor: move;
+}
+.viewportResizing{
+    background: linear-gradient(90deg,
+      rgba(190, 126, 230,0.7) 0%,
+      rgba(190, 126, 230,0.6) 4%,
+      rgba(190, 126, 230,0.5) 8%,
+      rgba(190, 126, 230,0.5) 92%,
+      rgba(190, 126, 230,0.6) 96%,
+      rgba(190, 126, 230,0.7) 100%);
+}
 .formatedFullDate{
   position: absolute;
   left: 50%;
@@ -35,13 +67,25 @@
 /*
   Cursors
 */
-
-.slide{
+.lower, .upper, .current, .slide{
     z-index: 4;
     cursor: col-resize;
     position: absolute;
     height: 100%;
     width: 3px;
+}
+.current{
+  border-left: 2px solid var(--currentCursorColor);
+}
+.lower{
+    left: 0px;
+    border-left: 1px solid var(--boundCursorsColor);
+}
+.upper{
+    right: 0px;
+    border-right: 1px solid var(--boundCursorsColor);
+}
+.slide{
     right: 0px;
     border-right: 1px solid var(--slideCursorColor);
 }
