[FT:#5828] Reorganized files and folders in windowProcess/Timebar

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar/Timebar.css
@@ -1,8 +1,4 @@
-@import '../style/variables.css';
-
-.h100minus13{
-  height: calc(100% - 13px);
-}
+@import '../../style/variables.css';
 
 .viewportWrapper{
     padding-top: 24px;
