--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/RightTab.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/RightTab.css
@@ -4,3 +4,10 @@
   width: 100%;
   height: 100%;
 }
+
+.formatedFullDate{
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 30%);
+  color: #222;
+}
