[FT:#5828] Draft the resizable panels and cleanup components props (views not functionnal)

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
@@ -5,18 +5,6 @@
   overflow: hidden;
 }
 
-.content {
-  height: 100%;
-  /* TODO boxmodel remove after panel resizing */
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-content: stretch;
-  align-items: stretch;
-  /* TODO boxmodel remove after panel resizing */
-}
-
 .tabs {
-  height: 40px;
+  //height: 40px;
 }
