--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Editor/Editor.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Editor/Editor.css
@@ -1,7 +1,9 @@
 @import '../style/variables';
 
 .editor {
+  width: 100%;
   height: 100%;
+  background: #FFF;
   padding-top: 5px;
 
   :global {
