--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Explorer/Explorer.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Explorer/Explorer.css
@@ -1,10 +1,11 @@
 @import '../style/variables';
 
 .container {
-  background: #FAFAFA;
+  width: 100%;
+  height: 100%;
+  background: #FFF;
   border-left: 1px solid #aaa;
   padding: 0 5px;
-  height: 100%;
 }
 
 .widgetContainer {
