--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar/Timebar.css
@@ -1,5 +1,9 @@
 @import '../../style/variables.css';
 
+.h100minus13{
+  height: calc(100% - 13px);
+}
+
 .viewportWrapper{
     padding-top: 24px;
     position: relative;
@@ -9,7 +13,6 @@
 .viewportContainer{
     min-height: 55px;
     position: relative;
-    background: #fff;
     border: 1px solid #bbb;
     background: #FAFAFA;
     height: calc(100% - 52px);
@@ -25,7 +28,7 @@
     position: absolute;
     height: 100%;
     width: 3px;
-    right: 0px;
+    right: 0;
     border-right: 1px solid var(--slideCursorColor);
 }
 .lower:before, .upper:before{
@@ -61,18 +64,17 @@
   &.undisplayed {
     display: none;
   }
-  transition: width 0.1s;
-  transition: height 0.1s;
+  transition: width 0.1s, height 0.1s;
   &.handleLower, &.handleUpper{
     top: 5px;
     background: var(--boundCursorsColor);
   }
   &.handleLower{
-    left: 0px;
+    left: 0;
     transform: translateX(-50%);
   }
   &.handleUpper{
-    right: 0px;
+    right: 0;
     transform: translateX(50%);
   }
   &.handleCurrent{
@@ -138,7 +140,7 @@
     width: 20px;
     height: 15px;
     cursor: pointer;
-    box-shadow: 0px 0px 5px #666;
+    box-shadow: 0 0 5px #666;
     padding: 0;
     line-height: 4px;
     font-size: 1.1em;
@@ -151,7 +153,6 @@
 }
 .arrowExt{
   width: 35px;
-  font-size: 1em;
   font-size: 0.8em;
   line-height: 0.70em;
   font-weight: 600;
@@ -166,33 +167,12 @@
 .arrowLeftBring:hover, .arrowRightBring:hover{
   background: #111;
 }
-.resizeTimebarContainer{
-  margin: 0;
-  height: 4px;
-  cursor: row-resize;
-}
-.resizeTimebarContainer:before{
-    width: 20px;
-    height: 12px;
-    line-height: 12px;
-    text-align: center;
-    content: '≡';
-    color: #888;
-    position: absolute;
-    top: 0px;
-    left: 50%;
-    font-size: 1.2em;
-    transform: translateX(-50%);
-    z-index: 4;
-}
-.resizingTimebarContainer:before{
-  color: #555;
-}
+
 .timelines{
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
-  box-shadow: 0px 0px 8px rgba(0,0,0,0.2) inset;
+  box-shadow: 0 0 8px rgba(0,0,0,0.2) inset;
 }
 
 .timeline{
@@ -206,14 +186,14 @@
   max-width: 200px;
   background-color: rgba(255,255,255,0.8);
   height: 100%;
-  margin: 0px auto;
+  margin: 0 auto;
   padding-left: 6px;
   line-height: 20px;
 }
 .timelineOffset{
   position: absolute;
   height: 2px;
-  bottom: 0px;
+  bottom: 0;
   background-color: #F45;
 }
 .rightTab{
