--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/TimebarWrapper.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/TimebarWrapper.css
@@ -1,3 +1,10 @@
+.container {
+  background: #FAFAFA;
+  border-top: 1px solid #aaa;
+  z-index: 2;
+  padding: 0 5px;
+  flex: 1;
+}
 .resizeTimebarContainer{
   margin: 0;
   height: 4px;
