--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar/VisuWindow.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/Timebar/VisuWindow.css
@@ -51,3 +51,72 @@
     right: 0px;
     border-right: 1px solid var(--boundCursorsColor);
 }
+
+
+.moved{
+  top: -24px;
+}
+
+
+.lowerFormattedTime{
+  position: absolute;
+  top: -14px;
+  transform: translateX(-100%);
+  color: #d34;
+  font-weight: bold;
+  font-size: .9em;
+}
+.upperFormattedTime{
+  position: absolute;
+  top: -14px;
+  right: 0;
+  color: #d34;
+  transform: translateX(100%);
+  font-weight: bold;
+  font-size: .9em;
+}
+.currentFormattedTime{
+  position: absolute;
+  top: -14px;
+  color: #1A2;
+  white-space: nowrap;
+  z-index: 2;
+  transform: translateX(-50%);
+  font-weight: bold;
+  font-size: .9em;
+}
+
+
+.handle{
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 12;
+  cursor: pointer;
+  filter: brightness(0.9);
+  &:hover{
+    filter: brightness(0.8);
+  }
+  &.undisplayed {
+    display: none;
+  }
+  transition: width 0.1s, height 0.1s;
+  &.handleLower, &.handleUpper{
+    top: 5px;
+    background: var(--boundCursorsColor);
+  }
+  &.handleLower{
+    left: 0;
+    transform: translateX(-50%);
+  }
+  &.handleUpper{
+    right: 0;
+    transform: translateX(50%);
+  }
+  &.handleCurrent{
+    top: 20px;
+    background: var(--currentCursorColor);
+    transform: translateX(-40%);
+  }
+}
