[FT:#5828] Collapse / minimize buttons on panel dividers. New colors for dividers, darker.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/TimebarWrapper.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/TimebarWrapper.css
@@ -4,6 +4,7 @@
   z-index: 2;
   padding: 0 5px;
   flex: 1;
+  padding: 0;
 }
 .resizeTimebarContainer{
   margin: 0;
@@ -11,5 +12,6 @@
   cursor: row-resize;
 }
 .h100minus13{
-  height: calc(100% - 13px);
+  height: calc(100% - 40px);
+  padding-right: 0px;
 }
