[FT:#5828] Window.js : rethinking panels behaviour, fix vima bottom invisible.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
@@ -4,9 +4,9 @@
   height: 100%;
   overflow: hidden;
 }
-
-.tabs {
-  //height: 40px;
+.panelsContainer{
+  flex-direction: column;
+  display: flex;
 }
 
 .leftBarEl{
