--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/TimebarWrapper.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/TimebarWrapper.css
@@ -11,7 +11,9 @@
   height: 4px;
   cursor: row-resize;
 }
-.h100minus13{
+.timebarWrapper{
   height: 100%;
   padding-right: 0px;
+  float: left;
+  width: 75%;
 }
